--- a/package.json
+++ b/package.json
@@ -1,29 +1,40 @@
 {
-  "name": "www.onel0p3z.co",
-  "description": "My personal site http://www.onel0p3z.co",
-  "version": "1.0.0",
-  "author": "Juan Lopez <onel0p3z@gmail.com>",
-  "bugs": {
-    "url": "https://github.com/onel0p3z/www.onel0p3z.co/issues"
-  },
-  "devDependencies": {
-    "vite": "^5.2.0"
-  },
-  "homepage": "https://github.com/onel0p3z/www.onel0p3z.co#readme",
-  "keywords": [
-    "onel0p3z",
-    "personal",
-    "website"
-  ],
-  "license": "ISC",
-  "main": "index.html",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/onel0p3z/www.onel0p3z.co.git"
-  },
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  }
+    "name": "www.onel0p3z.co",
+    "description": "My personal site http://www.onel0p3z.co",
+    "version": "1.0.0",
+    "author": "Juan Lopez <onel0p3z@gmail.com>",
+    "bugs": {
+        "url": "https://github.com/onel0p3z/www.onel0p3z.co/issues"
+    },
+    "devDependencies": {
+        "@eslint/js": "^9.39.1",
+        "autoprefixer": "^10.4.22",
+        "eslint": "^9.39.1",
+        "globals": "^16.5.0",
+        "postcss": "^8.5.6",
+        "prettier": "^3.7.4",
+        "stylelint": "^16.26.1",
+        "stylelint-config-standard": "^39.0.1",
+        "vite": "^5.2.0"
+    },
+    "homepage": "https://github.com/onel0p3z/www.onel0p3z.co#readme",
+    "keywords": [
+        "onel0p3z",
+        "personal",
+        "website"
+    ],
+    "license": "ISC",
+    "main": "index.html",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/onel0p3z/www.onel0p3z.co.git"
+    },
+    "scripts": {
+        "dev": "vite",
+        "build": "vite build",
+        "preview": "vite preview",
+        "lint": "eslint .",
+        "lint:css": "stylelint \"**/*.css\"",
+        "format": "prettier --write ."
+    }
 }
