fix: resolve production asset loading and improve code quality
Moved assets to public/ for Vite compatibility. Refactored CSS to use variables and nesting. Added check script and improved linting config.

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "preview": "vite preview",
         "lint": "eslint .",
         "lint:css": "stylelint \"**/*.css\"",
-        "format": "prettier --write ."
+        "format": "prettier --write .",
+        "check": "npm run lint && npm run lint:css && npm run format"
     }
 }
